# wavePicker

./: CMakeLists.txt  OFsetupscript.sh  README.md
src/: example.h  main.cpp  ofwavedictgen.cpp  ofwavedictgen.h  wavepick.cpp  wavepick.h
